Reduce firefox profile sync time to 1 hour
 update firefox and linux-firmware section
 Ignore linux firmware packages actually used on my current system

Signed-off-by: Bernard Assan <mega.alpha100@gmail.com>

--- a/etc/pacman.d/pacman.conf
+++ b/etc/pacman.d/pacman.conf
@@ -2,7 +2,8 @@
 # pacman drop in config /etc/pacman.d/
 # NOTE: Don't forget to add Include = /etc/pacman.d/pacman.conf in /etc/pacman.conf
 [options]
-IgnorePkg   = linux-zen libreoffice-fresh linux-firmware firefox
+# https://wiki.archlinux.org/title/Linux_firmware#Detecting_loaded_firmware
+IgnorePkg = linux-zen linux-firmware-intel linux-firmware-realtek firefox
 Color
 VerbosePkgLists
 ParallelDownloads = 5
