Ghostty: Add quick_terminal mapping
Signed-off-by: Bernard Assan <mega.alpha100@gmail.com>

--- a/etc/makepkg.conf.d/makepkg.conf
+++ b/etc/makepkg.conf.d/makepkg.conf
@@ -1,4 +1,5 @@
 #!/hint/bash
+# shellcheck disable=SC2034
 # Default config https://gitlab.archlinux.org/archlinux/packaging/packages/pacman/-/raw/main/makepkg.conf?ref_type=heads
 # Drop in system config for /etc/makepkg.conf in /etc/makepkg.conf.d/makepkg.conf
 
@@ -11,7 +12,7 @@ CFLAGS=${CFLAGS/"-march=x86-64 -mtune=generic"/"-march=native"}
 CXXFLAGS="${CFLAGS} ${_CXX_SPECIFIC_FLAGS}"
 LDFLAGS+=" -fuse-ld=mold"
 #-- Make Flags: change this for DistCC/SMP systems
-MAKEFLAGS="-j$(($(nproc)+2))"
+MAKEFLAGS="-j$(($(nproc) + 2))"
 
 #########################################################################
 # RUST LANGUAGE SUPPORT
