--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -10,4 +10,5 @@ keybind = ctrl+shift+z=jump_to_prompt:-1
 keybind = ctrl+shift+x=jump_to_prompt:+1
 keybind = ctrl+shift+left_bracket=goto_split:previous
 keybind = ctrl+shift+right_bracket=goto_split:next
+keybind = global:super+shift+t=toggle_quick_terminal
 # keybind = ctrl+w=close_surface
