--- a/efi/loader/loader.conf
+++ b/efi/loader/loader.conf
@@ -1,8 +1,9 @@
 # https://wiki.archlinux.org/title/Systemd-boot#Configuration
 # A glob pattern to select the default entry.
 default arch-linux-zen.efi
-# Use the firmware provided resolution for boot menu
-console-mode keep
+# Use heuristics to determine a suitable mode/resolution (mode 3 work for me)
+# You can use `r` to change the mode at the boot menu and `h` for help
+console-mode auto
 # No menu is shown and the default entry will be booted immediately
 # access boot menu with <Space>
 timeout menu-hidden
