Set static hostname in wsl.conf
Added configuration for static hostname in WSL.

--- a/wsl/etc/wsl.conf
+++ b/wsl/etc/wsl.conf
@@ -3,3 +3,6 @@
 # https://learn.microsoft.com/en-us/windows/wsl/troubleshooting#networking-considerations-with-dns-tunneling
 [network]
 generateResolvConf = false
+# To set a new static hostname, use the lines below
+generateHosts = false
+hostname = malpha-wsl
