--- a/wsl/etc/wsl.conf
+++ b/wsl/etc/wsl.conf
@@ -1,7 +1,7 @@
-# Add below to /etc/wsl.conf to resolve DNS issues
+[network]
+# Add below to /etc/wsl.conf if you experience any DNS issues
 # https://github.com/microsoft/WSL/issues/12101#issuecomment-3206099811
 # https://learn.microsoft.com/en-us/windows/wsl/troubleshooting#networking-considerations-with-dns-tunneling
-[network]
 generateResolvConf = false
 # To set a new static hostname, use the lines below
 generateHosts = false
