Add CheckSpace option to pacman configuration

--- a/etc/pacman.d/pacman.conf
+++ b/etc/pacman.d/pacman.conf
@@ -5,5 +5,6 @@
 # https://wiki.archlinux.org/title/Linux_firmware#Detecting_loaded_firmware
 IgnorePkg = linux-zen linux-firmware-intel linux-firmware-realtek firefox
 Color
+CheckSpace
 VerbosePkgLists
 ParallelDownloads = 5
